# Securing-Containers-Honeypots

./: docker-compose.yml
Extension/docker_monitor/: docker_control.go  go.mod  go.sum
Extension/kubemonitor/: go.mod  go.sum  kube.sql  main.go
Extension/osquery-ebpf-extensions/: .gitignore  README.md
old/Backend/: .gitignore  requirements.txt
old/Backend/ad_hoc/: apps.py  urls.py  views.py
old/Backend/auth/: settings.py  urls.py
old/Backend/config/: urls.py  views.py
old/Backend/dashboard/: urls.py  views.py
old/Backend/event/: urls.py  views.py
old/Backend/node/: urls.py  views.py
old/Fleet/: CMakeLists.txt  config.json
old/Fleet/common/: CMakeLists.txt  ConfigurationParser.cpp  ConfigurationParser.h  ConnectionPool.h  EdrDataTypes.h  ThreadPool.cpp  ThreadPool.h  hostinfo.cpp  hostinfo.h  logger.h  plugin_base.h
old/Fleet/correlation/: main.cpp
old/Fleet/event_processor/: EventProcessor.cpp  EventProcessor.h  main.cpp
old/Fleet/event_rules/: detection_rules.cpp  detection_rules.h  plugin_main.cpp
old/Fleet/proto/containerd/: container_events.proto  content.proto  content_events.proto  descriptor.proto  events.proto  images.proto  leases.proto  metrics.proto  mount.proto  namespace_events.proto  version.proto
old/Fleet/remediation/: CommunicationService.cpp  FilesystemMonitor.cpp  FilesystemMonitor.h  OsqueryConfig.cpp  OsqueryConfig.h  PluginLoader.cpp  PluginLoader.h  RemediationService.cpp  RemediationService.h  ThreatSignatureService.cpp  main.cpp
old/Fleet/remediation/blocking_rules/: plugin_main.cpp
old/Fleet/rule_engine/: PluginLoader.cpp  PluginLoader.h  RuleEngine.cpp  RuleEngine.h  main.cpp
old/Fleet/scripts/: server.sh
old/Fleet/server/: api_server.cpp  fleet_main.cpp  request_handler.cpp
old/Fleet/server/api/: config.h  dashboard.cpp  dashboard.h  events.cpp  events.h  nodes.cpp  nodes.h  scheduled_query.cpp  scheduled_query.h  stats.cpp
old/Fleet/sql/: create_tables.sql
old/Fleet/ssl/: cagen.sh  dh.pem  dhgen.sh  localhost.crt  localhost.csr  localhost.key  sslgen.sh
old/Fleet/utilities/: userctl.cpp
old/Frontend/: Readme  package-lock.json  package.json
old/Frontend/src/: App.tsx
old/Honeypot/: docker_honeypot.go  go.mod  go.sum
ui/: .gitmodules  README.md  docker-compose.yml  node_setup.sh  website_setup.sh
ui/Client/: .env.development.local  .env.docker  .env.production.local  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  nginx_dev.conf  nginx_prod.conf  package-lock.json  package.json
ui/Server/: .dockerignore  .env  .env.docker  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml  package-lock.json  package.json  test.py
vajra/: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  readme.md
vajra/Front-end/: Readme.md  db.sqlite3  manage.py  requirements.txt
vajra/Front-end/Os_query/: asgi.py  settings.py  urls.py  wsgi.py
vajra/Front-end/dashboard/: urls.py  views.py
vajra/Front-end/dashboard/templatetags/: bytetogb.py  capthename.py  json.py  time.py
vajra/Front-end/static/assets/css/: Pattaya.css  Poppins.css  button.css  flash.css  json.css  page404.css  style.css
vajra/Front-end/static/assets/js/: addhawk.js  config.js  extended.js  graph.js
vajra/Front-end/templates/: Events.html  addcon.html  addhawk.html  blocklist.html  boiler.html  config.html  error404.html  index.html  json.html  jsonified.html  login_signin.html  node_extended.html  serverDown.html  stats.html  upcon.html
vajra/common/: CMakeLists.txt  ConnectionPool.cpp  EdrDataTypes.h  LRUcache.h  plugin_base.h
vajra/event_processor/: EventProcessor.cpp  EventProcessor.h  main.cpp
vajra/event_rules/: collection_rules.cpp  collection_rules.h  command_control_rules.cpp  command_control_rules.h  credential_access_rules.cpp  credential_access_rules.h  detection_rules.cpp  detection_rules.h  exfiltration_rules.cpp  exfiltration_rules.h  gtfobins_rules.cpp  gtfobins_rules.h  import_rules.py  plugin_main.cpp  win_collection_rules.cpp  win_collection_rules.h  win_command_control_rules.cpp  win_command_control_rules.h  win_credential_access_rules.cpp  win_credential_access_rules.h  win_defence_evasion_rules.cpp  win_defence_evasion_rules.h  win_detection_rules.cpp  win_detection_rules.h  win_discovery_rules.cpp  win_discovery_rules.h  win_execution_rules.cpp  win_execution_rules.h  win_exfilteration_rules.cpp  win_exfilteration_rules.h  win_impact_rules.cpp  win_impact_rules.h  win_initial_access_rules.cpp  win_initial_access_rules.h  win_lateral_movement.cpp  win_lateral_movement.h  win_persistence_rules.cpp  win_persistence_rules.h  win_privilege_escalation_rules.cpp  win_privilege_escalation_rules.h
vajra/img/: README.MD
vajra/osquery/: osquery.flags
vajra/proto/containerd/: containers.proto  diff.proto  image_events.proto  introspection.proto  namespace.proto  platform.proto  snapshot_events.proto  snapshots.proto  task.proto  task_events.proto  tasks.proto
vajra/python_RuleEngine/: PythonRuleEngine.py
vajra/python_RuleEngine/AddRules/: addRules.py
vajra/python_RuleEngine/DB/: db_evn.py
vajra/python_RuleEngine/Engine/: Engine.py
vajra/python_RuleEngine/EventRules/: plugin_main.py  rules.py
vajra/remediation/: CommunicationService.cpp  FilesystemMonitor.cpp  HTTPClient.cpp  HTTPClient.h  PluginLoader.cpp  PluginLoader.h  main.cpp
vajra/remediation/agent_hook/: agent_hook.cpp  agent_hook.h
vajra/remediation/blocking_rules/: blocking_rules.cpp  blocking_rules.h  plugin_main.cpp
vajra/rule_engine/: PluginLoader.cpp  PluginLoader.h  RuleEngine.cpp  RuleEngine.h  main.cpp
vajra/scripts/: osqueryinstall.sh
vajra/server/: WebServer.h  api_server.cpp  fleet_main.cpp  request_handler.cpp  request_handler.h
vajra/server/api/: config.cpp  config.h  dashboard.cpp  events.cpp  events.h  nodes.cpp  nodes.h  python_rule.cpp  python_rule.h  rule_builder.cpp  rule_builder.h  settings.cpp  settings.h  stats.cpp  stats.h
vajra/sql/: create_tables.sql
vajra/ssl/: myCA.key  myCA.pem  myCA.srl  sslgen.sh
(+279 files in other folders)
